# discord-gif-saver

./: .eslintrc.cjs  .gitignore  Cargo.toml  README.md  build.rs  bun.lockb  package.json
src/: decoding.rs  downloading.rs  index.ts  main.rs
src/proto/: settings.proto
