[package]
name = "gif-saver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
async-channel = "1.9.0"
base64 = "0.21.4"
bytes = "1.5.0"
futures = "0.3.28"
infer = { version = "0.15.0", default-features = false }
prost = "0.12.1"
reqwest = "0.11.20"
sha2 = "0.10.7"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[build-dependencies]
prost-build = "0.12.1"
