[package]
name = "gif-saver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
async-channel = "2.1.1"
base64 = "0.21.5"
bytes = "1.5.0"
futures = "0.3.29"
infer = { version = "0.15.0", default-features = false }
prost = "0.12.3"
reqwest = "0.11.22"
sha2 = "0.10.8"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
prost-build = "0.12.3"
